Add Javascript to index

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sun 27 Aug 2560 Web Tech",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "transpile": "babel --presets es2015 js/index.js -o build/main.bundle.js",
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
