--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sun 27 Aug 2560 Web Tech",
   "main": "index.js",
   "scripts": {
-    "transpile": "babel --presets es2015 js/index.js -o build/main.bundle.js",
+    "transpile": "browserify js/index.js -o build/main.bundle.js -t [ babelify --presets es2015 ]",
     "start": "http-server"
   },
   "repository": {
@@ -21,6 +21,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "http-server": "^0.10.0"
   }
 }
